--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="main.css">
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Google Office</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-
+    <webview class="webview" src="https://docs.google.com" allowpopups></webview>
     <script>
       // You can also require other files to run in this process
       require('./renderer.js')
